fix: align the blog post topic icon with the title on mobile

--- a/app/assets/stylesheets/blogs.scss
+++ b/app/assets/stylesheets/blogs.scss
@@ -34,7 +34,7 @@
     }
     &-text {
       &-meta {
-        margin: 0.5rem 0;
+        margin: 0.3rem 0;
         font-size: 0.8em;
       }
       h4 {
